--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="search">
+        <div class="search new">
             <h1>Piano Chords</h1>
             <form>
-                <input type="text" placeholder="Enter a Note (A-G)" id="chord-search">
-                <button id="search-btn">Search</button>
+                <input type="text" placeholder="Enter a Note (A-G)" id="chord-search"><br>
+                <button class="btn" id="search-btn">Search</button>
             </form>
         </div>
         
